app/static/styles/main.scss
/* ... */
.pokemon-card {
  .header .sub-header {
    font-style: italic;
    color: #8c8c8c;
  }
}

#raid-bosses-list {
  overflow-y: scroll;
  height: calc(100vh - 83px);
  padding-right: 10px;

  @include phone {
    padding: 0;
    overflow-y: unset;
  }

  .raid-boss-tier {
    margin-bottom: 10px;

    &.t1 .raid-boss {
      background-color: #e5a1b0;

      &:hover {
        background-color: lighten(#e5a1b0, 10%);
      }
    }

    &.t2 .raid-boss {
      background-color: #eb6385;

      &:hover {
        background-color: lighten(#eb6385, 10%);
      }
    }

    &.t3 .raid-boss {
      background-color: #fccc6d;

      &:hover {
        background-color: lighten(#fccc6d, 10%);
      }
    }

    &.t4 .raid-boss {
      background-color: #e3b346;

      &:hover {
        background-color: lighten(#e3b346, 10%);
      }
    }

    &.t5 .raid-boss {
      background-color: #c9a0e2;

      &:hover {
        background-color: lighten(#c9a0e2, 10%);
      }
    }

    &.t6 .raid-boss {
      background-color: #000;
      color: #fff;

      &:hover {
        background-color: lighten(#000, 10%);
      }

      .cp div.cp_range_weather {
        color: #aaa;
      }

      .battle_cp {
        background: rgba(255, 255, 255, 0.8);
      }
    }

    &:last-child {
      margin-bottom: 0;
    }

    .raid-boss {
      background: #2aabd2;
      max-width: 800px;
      display: grid;
      grid-template-areas: "tier img name type battlecp cp";
      grid-template-columns: 40px 40px auto 55px 100px 120px;
      grid-template-rows: 50px;
      grid-gap: 5px;

      &:first-child {
        border-radius: 4px 4px 0 0;
      }

      &:last-child {
        border-radius: 0 0 4px 4px;
      }

      &:only-child {
        border-radius: 4px;
      }

      @include phone {
        grid-template-areas: "tier img name type cp";
        grid-template-columns: 40px 40px auto 55px 100px;

        .battle_cp {
          display: none;
        }
      }

      .tier {
        grid-area: tier;
        text-align: center;
        font-weight: 600;
        font-size: 16px;
        line-height: 50px;
      }

      .img {
        grid-area: img;
        position: relative;

        img {
          position: absolute;
          width: 70px;
          bottom: -5px;
          right: -5px;
        }
      }

      .name {
        grid-area: name;
        font-family: "Patua One";
        font-weight: 400;
        font-size: 20px;
        line-height: 50px;
        z-index: 1;

        .shiny {
          display: inline;
          color: #fff8db;
          margin-left: 10px;

          i {
            text-shadow: -2px 0 #b58105, 0 2px #b58105, 2px 0 #b58105, 0 -2px #b58105;
          }
        }

        @include phone {
          font-size: 16px;
        }
      }

      .type {
        grid-area: type;

        img {
          float: left;
          height: 30px;
          margin: 10px 0 10px -10px;

          &:first-child {
            margin: 10px 0;
          }
        }
      }

      .battle_cp {
        grid-area: battlecp;
        font-weight: 600;
        font-size: 16px;
        line-height: 26px;
        color: #333;
        margin: 12px 0;
        background: rgba(255, 255, 255, 0.4);
        border-radius: 4px;
        text-align: center;
      }

      .cp {
        grid-area: cp;

        div {
          text-align: center;
          line-height: 25px;
          font-weight: 600;
          color: #fff;

          &.cp_range_weather {
            color: #333;
          }
        }
      }
    }
  }
}

#egg-hatches-list {
  overflow-y: scroll;
  height: calc(100vh - 83px);
  padding-right: 10px;

  @include phone {
    padding: 0;
    overflow-y: unset;
  }

  .egg-hatch-tier {
    position: relative;
    margin: 0 0 10px;
    border-radius: 4px;
    max-width: 800px;
    padding: 10px;


    &.tier-2km {
      background-color: #95b36a;
    }

    &.tier-5km {
      background-color: #d6a743;
    }

    &.tier-7km {
      background-color: #fccc6d;
    }

    &.tier-10km {
      background-color: lighten(#897da9, 10%);
      margin: 0;
    }

    .tier-header {
      grid-area: header;
      font-family: "Patua One";
      font-weight: 400;
      font-size: 20px;
      line-height: 30px;
      margin-bottom: 10px;

      img {
        height: 30px;
        float: left;
        margin-right: 10px;
      }
    }

    .pokemon_list {
      display: grid;
      grid-gap: 5px;
      grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));

      .egg-hatch {
        display: grid;
        grid-template-areas: "img" "name";
        grid-template-columns: 1fr;
        grid-template-rows: 70px 35px;

        .img {
          grid-area: img;
          position: relative;
          text-align: center;

          img {
            width: 70px;
            margin: auto;
          }

          .shiny {
            position: absolute;
            top: 0;
            left: 0;
            color: #fff8db;

            i {
              text-shadow: -2px 0 #b58105, 0 2px #b58105, 2px 0 #b58105, 0 -2px #b58105;
            }
          }
        }

        .name {
          grid-area: name;
          font-weight: 600;
          text-align: center;
        }
      }
    }
  }
}

.content-panel.user-settings {
  padding: 18px;
  overflow-y: scroll;
  height: calc(100vh - 83px);

  @include phone {
    padding: 0;
    overflow-y: unset;

    .ui.segment {
      margin: 10px 0;
    }

    .ui.basic.segment {
      margin: 0;
      padding: 0;
    }

    .ui.icon.header .circular.icon {
        font-size: 1em;
    }
  }
}

